--- a/public/css/common.css
+++ b/public/css/common.css
@@ -28,13 +28,13 @@ body {
   margin: 0%;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-align: center;
 }
-a{
+a {
   text-decoration: none;
   color: #ffffff;
 }
@@ -51,7 +51,6 @@ h3 {
 h4 {
   font-size: 20px;
 }
-
 
 /* ヘッダー */
 .header {
@@ -206,7 +205,7 @@ h4 {
   padding-top: 30%;
 }
 
-.navigation-img img{
+.navigation-img img {
   height: 3rem;
 }
 
@@ -249,7 +248,7 @@ h4 {
   font-size: 20px;
   margin: 0;
 }
-.footer a{
+.footer a {
   text-decoration: underline;
   color: #ffffff;
 }
@@ -277,9 +276,7 @@ h4 {
 .top {
   width: 100%;
   overflow: hidden;
-
   margin-top: 70px;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -342,10 +339,32 @@ h4 {
 .top .second-nav-box p {
   padding: 0.5rem 0;
   font-size: 1rem;
-  font-weight: 300;
+  font-weight: bold;
   text-decoration: none;
   color: #000000;
   margin: 0;
+}
+
+.title-event {
+  width: 300px;
+  padding-top: 6%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.title-event h2 {
+  font-size: 40px;
+  color: #eb3e37;
+  position: relative;
+}
+.title-event h2::before {
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  color: #fff2d8;
+  font-size: 40px;
+  content: "EVENT";
 }
 
 @media screen and (max-width: 480px) {
